Tring to fix image draggable on mobile browser. .

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,10 +1,13 @@
 img {
-  user-drag: none;
+  -webkit-touch-callout: none; /* Safari Touch */
+  -webkit-user-select: none;   /* Webkit */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Edge*/
+  user-select: none;           /* Future-proof*/
   -webkit-user-drag: none;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
 
 .gradient-custom {
